# tabular_nn

./: .coverage  .gitignore  LICENSE  README.md  benchmark_datasets.xlsx  pyproject.toml  pyrightconfig.json  requirements.txt  tox.ini
.github/workflows/: release.yml  test.yml
guides/: dvc_guide.txt  gpu_check.txt  pip_guide.txt  test_polars.ipynb  torch_gpu_check.ipynb
notebooks/: design_tests_helper.ipynb  notes.txt  tabular_argn.ipynb
src/tabular_nn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: argn_encoder_decoder.py  tabular_datasets.py
test/: conftest.py
test/unit/: test_arg_dataset.py  test_argn_encoder_decoder.py
